añadido multi idioma prueba de error del index 2 y sitme map

--- a/src/pages/about/es/index.astro
+++ b/src/pages/about/es/index.astro
@@ -36,7 +36,7 @@ const item = {
 		"name": "Marc Mayol Orell",
 		"jobTitle": "IA engineer y profesor",
 		"image": "https://marcmayol.com/images/perfil.jpg",
-		"description": "Marc Mayol especialista en inteligencia artificial generativa, desarrollo de productos y formación en IA.",
+		"description": "Marc Mayol especialista en2 inteligencia artificial generativa, desarrollo de productos y formación en2 IA.",
 		"url": "https://marcmayol.com"
 	}
 }
