problema de redireccion extraña en el index

--- a/src/pages/blog/en/index.astro
+++ b/src/pages/blog/en/index.astro
@@ -27,7 +27,7 @@ const item ={
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang={lang}>
 	<head>
 		<BaseHead title={t('about.seotitle')}
 				  description={t('about.seodescription')}
