--- a/src/pages/blog/es/index.astro
+++ b/src/pages/blog/es/index.astro
@@ -27,7 +27,7 @@ const item ={
 ---
 
 <!doctype html>
-<html lang="es">a
+<html lang={lang}>
 	<head>
 		<BaseHead title={t('about.seotitle')}
 				  description={t('about.seodescription')}
