--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,12 @@ import PreFooter from '../components/PreFooter.astro';
 import {speakerTopics } from '../consts';
 import {ArrowRight} from '@lucide/astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
-const lang = getLangFromUrl(Astro.url);
+const userLang = navigator.language || navigator.userLanguage;
+const langCode = userLang.slice(0, 2).toLowerCase();
+const lang = langCode || getLangFromUrl(Astro.url);
+Astro.redirect('/'+lang);
 const t = useTranslations(lang);
+const inverse = lang === 'en' ? 'es' : 'en';
 
 const item = {
     '@context': 'https://schema.org',
@@ -33,7 +37,7 @@ const item = {
     <BaseHead title={t('home.seotitle')} description={t('home.seodescription')} item={item} image="/perfil.png"/>
 </head>
 <body>
-<Header />
+<Header customURL={'/'+inverse} />
 <div class="min-h-screen bg-white text-gray-900 font-sans antialiased">
 
     <main class="container mx-auto px-6 py-16 max-w-4xl">
